objects/Compra__c.object
<CustomObject>
    <fields>
        <fullName>CompraRealizada__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Campo Destinado para Confirmação da Compra</description>
        <inlineHelpText>Marque esta caixa, se foi feita à compra.</inlineHelpText>
        <label>Compra Realizada?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DataCompra__c</fullName>
        <description>Data que foi Realizada à Compra</description>
        <label>Data Compra</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>EstabelecimentoId__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Nome do Estabelecimento</description>
        <inlineHelpText>Nome do Estabelecimento</inlineHelpText>
        <label>Nome do Estabelecimento</label>
        <referenceTo>Estabelecimento__c</referenceTo>
        <relationshipLabel>Compras</relationshipLabel>
        <relationshipName>Compras</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FormaPagamento__c</fullName>
        <description>Forma de Pagamento</description>
        <inlineHelpText>Neste campo você tem que informar qual foi à forma de pagamento</inlineHelpText>
        <label>Forma de Pagamento</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CARTÃO DE DÉBITO</fullName>
                </value>
                <value>
                    <fullName>CARTÃO DE CRÉDITO</fullName>
                </value>
                <value>
                    <fullName>VOUCHER REFEIÇÃO</fullName>
                </value>
                <value>
                    <fullName>VOUCHER ALIMENTAÇÃO</fullName>
                </value>
                <value>
                    <fullName>DINHEIRO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ProdutoId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Nome do Produto</label>
        <referenceTo>Produto__c</referenceTo>
        <relationshipLabel>Compras</relationshipLabel>
        <relationshipName>Compras</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quantidade__c</fullName>
        <description>Quantidade do produto</description>
        <inlineHelpText>Informe à quantidade do produto</inlineHelpText>
        <label>Quantidade</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ValorProdutoCamera__c</fullName>
        <description>Valor do Produto Camera</description>
        <inlineHelpText>Valor do Produto Camera</inlineHelpText>
        <label>Valor do Produto Camera</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>ValorProduto__c</fullName>
        <description>Valor do PRoduto</description>
        <inlineHelpText>Este Campo é obrigatório, Você tem que digitar o valor unitário do Produto.</inlineHelpText>
        <label>Valor do Produto</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ValorTotal__c</fullName>
        <formula>Quantidade__c * ProdutoId__r.ValorMedio__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Valor Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Compra</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Compra-{0000}</displayFormat>
        <label>ID Compra</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Compras</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>VerifcaPagamentoVazio</fullName>
        <active>true</active>
        <description>Verifica se o tipo de pagamento foi escolhido</description>
        <errorConditionFormula>ISPICKVAL(FormaPagamento__c, &quot;&quot;)</errorConditionFormula>
        <errorMessage>Campo não pode ficar vazio. Informe qual foi à forma de pagamento.</errorMessage>
    </validationRules>
</CustomObject>